2010-02-17  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Eric Seidel.

        In diffing render styles, consider all pseudo style changes.
        Without this patch, only :before and :after are considered. This is the cause of the following bug.
        https://bugs.webkit.org/show_bug.cgi?id=32187

        * fast/css/first-letter-first-line-hover.html: Added.
        * platform/mac/fast/css/first-letter-first-line-hover-expected.checksum: Added.
        * platform/mac/fast/css/first-letter-first-line-hover-expected.png: Added.
        * platform/mac/fast/css/first-letter-first-line-hover-expected.txt: Added.
2010-02-17  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Eric Seidel.

        In diffing render styles, consider all pseudo style changes.
        Without this patch, only :before and :after are considered. This is the cause of the following bug.
        https://bugs.webkit.org/show_bug.cgi?id=32187

        Test: fast/css/first-letter-first-line-hover.html

        * dom/Node.cpp:
        (WebCore::Node::diff):
        * rendering/style/RenderStyle.cpp:
        (WebCore::RenderStyle::hasAnyPublicPseudoStyles):
        * rendering/style/RenderStyle.h:
        * rendering/style/RenderStyleConstants.h:
        (WebCore::):

Canonical link: https://commits.webkit.org/46233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54926 268f45cc-cd09-0410-ab3c-d52691b4dbfc